<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/photo_Image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/track"
            android:contentDescription="@string/contentDescription" />

        <TextView
            android:id="@+id/cityname"
            android:layout_width="265dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeMinTextSize="36sp"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:paddingLeft="16dp"
            android:paddingTop="20dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            android:text="@string/business_city"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/club"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cityname"
            android:layout_centerHorizontal="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:text="@string/business_name"
            android:textColor="@android:color/white"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/club"
            android:layout_alignParentRight="true"
            android:paddingTop="30dp"
            android:paddingRight="16dp"
            android:paddingBottom="24sp"
            android:text="@string/contact_text"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contact"
            android:layout_alignParentRight="true"
            android:paddingTop="0dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            android:textColorLink="@android:color/white"
            android:autoLink="phone"
            android:text="@string/business_phone_number"
            android:textAppearance="?android:textAppearanceSmall"
             />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone"
            android:layout_alignParentRight="true"
            android:paddingTop="0dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            android:autoLink="email"
            android:textColorLink="@android:color/white"
            android:text="@string/business_email"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_alignParentRight="true"
            android:paddingTop="30dp"
            android:paddingRight="16dp"
            android:paddingBottom="24dp"
            android:text="@string/address_text"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/placename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address"
            android:layout_alignParentRight="true"
            android:paddingTop="0dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            android:text="@string/business_address_part1"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/street"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/placename"
            android:layout_alignParentRight="true"
            android:paddingTop="0dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            android:text="@string/business_address_part2"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/street"
            android:layout_alignParentRight="true"
            android:paddingTop="0dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            android:text="@string/business_city"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/white" />


        <TextView
            android:id="@+id/postcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/city"
            android:layout_alignParentRight="true"
            android:onClick="location"
            android:paddingTop="0dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            android:text="@string/business_postcode"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/white"
            android:textColorLink="@android:color/white" />

        <TextView
            android:id="@+id/since"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:fontFamily="sans-serif-light"
            android:paddingRight="16dp"
            android:paddingBottom="24dp"
            android:text="@string/business_founded"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/logo1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/cityname"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/club"
            android:scaleType="fitCenter"
            android:src="@drawable/bac" />

        <ImageView
            android:id="@+id/logo2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/cityname"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/club"
            android:scaleType="fitCenter"
            android:src="@drawable/bac" />

    </RelativeLayout>
</ScrollView>